--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 .env*.local
 output
 dist
+target
 .idea
 node_modules
 package-lock.json
@@ -11,6 +12,7 @@ pnpm-lock.yaml
 .vercel
 private
 private.*
+private-*
 past.*
 
 lib/ts-utils
