--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "ts",
   "scripts": {
     "ts": "bun --watch scripts/run.ts",
+    "s": "bun --watch scripts/run.ts",
+    "sr": "bun --watch scripts/p-run.ts",
     "watch": "bun cmd.ts run",
     "dev": "bun --watch run.ts",
     "try": "bun --watch try/try.ts",
